# aygrep

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: benchmarks.yml  ci.yml  release.yml
Formula/: ayg.rb
scripts/: benchmark-full.sh  benchmark.sh  install.sh  release.sh  render-benchmark-site.py
src/: main.rs
